--- a/explorer/tsconfig.json
+++ b/explorer/tsconfig.json
@@ -6,7 +6,10 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "lib": ["esnext"]
+    "lib": [
+      "esnext",
+      "dom"
+    ]
   },
 
   "references": [
