--- a/explorer/package.json
+++ b/explorer/package.json
@@ -13,10 +13,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "bulma": "^0.9.4",
+    "json-bigint": "^1.0.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
+    "@types/json-bigint": "^1.0.1",
     "@types/node": "^16.11.47",
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/tsconfig": "^0.1.3",
