--- a/explorer/package.json
+++ b/explorer/package.json
@@ -26,5 +26,8 @@
     "typescript": "~4.7.4",
     "vite": "^3.0.4",
     "vue-tsc": "^0.39.5"
+  },
+  "optionalDependencies": {
+    "@discord-message-components/vue": "^0.2.1"
   }
 }
