--- a/explorer/package.json
+++ b/explorer/package.json
@@ -24,6 +24,7 @@
     "@vue/tsconfig": "^0.1.3",
     "npm-run-all": "^4.1.5",
     "typescript": "~4.7.4",
+    "sass": "^1.55.0",
     "vite": "^3.0.4",
     "vue-tsc": "^0.39.5"
   },
