--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,8 @@ tqdm~=4.64.0
 
 # exploration server
 fastapi~=0.79.0
-pandas==1.5.0
 uvicorn[standard]~=0.18.2
+
+# data analysis
+openai~=0.24.0
+pandas==1.5.0
