--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,12 @@ tqdm~=4.64.0
 
 # exploration server
 fastapi~=0.79.0
+pandas==1.5.0
 uvicorn[standard]~=0.18.2
+
+# regression
+scikit-learn~=1.1.2
+
+# distill3
+torch
+transformers
