--- a/.gitignore
+++ b/.gitignore
@@ -161,6 +161,5 @@ results/*.jsonl
 icooc/*.csv
 icooc/*/*.csv
 icooc/*.jsonl
-human_eval/human-eval-qualtrics.txt
 human_eval/human-eval-sta-nar.jsonl
-human_eval/profanity.txt
+human_eval/*.txt
